# Python_practice_sessions

./: .gitignore  README.md  auto_fn.py  comprehensions.ipynb  functions_.ipynb  functions_500_.ipynb  functions_500_.py  functions_u_tests.py  functions_u_tests_1.py  guess_game.ipynb  logging.toml  pyproject.toml  python_data_types.ipynb  python_data_types_String.ipynb  python_data_types_set_and_dict_.ipynb  python_iteration_ds.ipynb  python_iteration_ds_cd__1.ipynb  python_iteration_exercises.ipynb  test_data.ipynb  test_functions_u_tests_1.py
Functional_Programming/: closure_.py  closure_exercises.py  closure_practice_.py  closure_practice_0.py  composition_.py  decorators_.py  decorators_2.py  decorators_practice.py  functional_programming.ipynb
OOP_Programming/: codewars_functions_.py  ex_1.py  ex_5.py  ex_7.py  oop_v1_.py  oop_v2_.py  oop_v3_iterator.py  oop_v4_iterator.py
OOP_Programming/attributes_/: attrs_.py  descriptors_.py
Unit_tests/: common_word.py  fn_1.py  fn_500_bonus.py  fn_average_.py  fn_comprehension.py  fn_comprehension_2.py  fn_discount.py  fn_dogs_age.py  fn_ex_2.py  fn_gcd.py  fn_is_anagram.py  fn_is_even.py  fn_is_prime.py  fn_multi_list.py  fn_new_year.py  fn_s.py  immutable_ex_2.py  test_common_word.py  test_fn_1.py  test_fn_comprehension.py  test_fn_dogs_age.py  test_fn_is_even.py
Unit_tests/md/: pull_request_template.md
abstract_classes/: abc_1.py  temp_invariant.py
assignment/: Handball_elite.ipynb  expowiska tibia data_set.ipynb  pocemons_quest.ipynb
exceptions/: examp_1.py  examp_6.py
logging_/: e_1.py
(+19 files in other folders)
