[tool.poetry]
name = "python-practice-sessions"
version = "0.1.0"
description = ""
authors = ["Piotr Lipinski <kinetics20@gmail.com>"]
license = "Beerware"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.3.1"
mypy = "^1.14.0"
pytest = "8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
